--- a/src/app/registration/business-information/business-information.component.html
+++ b/src/app/registration/business-information/business-information.component.html
@@ -1,1 +1,157 @@
-<p>business-information works!</p>
+<div class="parent-bussiness">
+    <div class="image-column">
+        <img src="assets/Group 44.png" alt="bussiness image">
+        <div class="row img-title" >
+            <img src="assets/Glamera.svg" class="logo" alt="Glamera Logo">
+            <div class="header">Few clicks away from creating your business</div>
+            <div class="description">Start your business in minutes. save time and money</div>
+        </div>
+
+    </div>
+    <div class="form-column">
+
+        <!-- Get Help link -->
+        <div class="row help-link" >
+            <div class=" col-sm-12 col-md-4" style="width: auto;" >
+                    <span class="having-troubles">Having troubles?</span>
+                    <a href="#" class="get-help">Get Help</a>
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="col-sm-12 col-md-8" style="margin: auto;"> 
+                <!-- back arrow -->
+                <div class="col-sm-12">
+                    <img src="assets/back-arrow.svg" class="back-arrow"  alt="back-arrow">
+                </div>
+
+                <!-- Header  -->
+                <div class="col-sm-12">
+                    <div class="header">Choose the type of business</div>
+                    <div class="description">
+                        To get start tell us what type of Business you are going to incorporate and name</div>
+                </div>
+                
+                <!-- Form controls -->
+              <div class="col-sm-12">
+                <form [formGroup]="BusinessForm" (ngSubmit)="onSubmit()">
+                        <!-- Company Name Control -->
+                        <div class=" col-sm-12 ">
+                            <label for="CompanyName" class="my-2">Company Name</label>
+                            <input id="CompanyName" formControlName="CompanyName"
+                                    type="text" class="form-control" [class.error]="hasError('CompanyName', 'required')">
+                                    
+                            <div *ngIf="hasError('CompanyName', 'required')" class="invalid-feedback">
+                            Company Name is required.
+                            </div>
+                        </div>
+
+                        <!-- Bussiness Type -->
+                        <label for="BusinessType" class="my-2">Business Type</label>
+                        <div class="row">
+                            <div class="business-types">
+                            <div *ngFor="let type of businessTypes" class=" col-xs-12 col-md-5 col-lg-3 business-type"
+                                [class.selected]="selectedType === type.id" 
+                                (click)="toggleSelection(type.id)">
+                                <img [src]="type.imgSrc" alt="{{ type.name }}" class="me-2"/>
+                                <span>{{ type.name }}</span>
+                            </div>
+                            </div>
+
+                            <div *ngIf="hasError('BusinessType', 'required')" class="error">
+                            Business type is required
+                            </div>
+                        </div>
+
+                    <div class="row">
+                        <!-- Governorate -->
+                        <div class="col-sm-12 col-md-6 mb-3">
+                            <label for="Governorate" class="form-label my-2">Governorate</label>
+                            <select id="Governorate" formControlName="Governorate" class="form-select" (change)="selectGovernorate($event)">
+                            <option value="" disabled selected > Select governorate</option>
+                            <option *ngFor="let governorate of Governorates" [value]="governorate.id">
+                                {{ governorate.name }}
+                            </option>
+                            </select>
+
+                            <div *ngIf="hasError('Governorate', 'required')" class="invalid-feedback">
+                            Governorate is required.
+                            </div>
+                        </div>
+
+                       <!-- City -->
+                        <div class="col-sm-12 col-md-6 mb-3">
+                            <label for="City" class="form-label my-2">City</label>
+                            <select id="City" formControlName="City" class="form-select" [disabled]="!selectedGovernorate">
+                            <option value="" disabled selected > Select City</option>
+                            <option *ngFor="let City of cities" [value]="City.id">
+                                {{ City.name }}
+                            </option>
+                            </select>
+
+                            <div *ngIf="hasError('City', 'required')" class="invalid-feedback">
+                            City is required.
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="row">
+                        <!-- how did you know about us -->
+                        <div class="col-sm-12 col-md-6 mb-3">
+                            <label for="HowDidYouKnowUs" class="form-label my-2">How did you know us?</label>
+                            <div class="dropdown custom-dropdown">
+                            <div class="form-select dropdown-toggle"  id="HowDidYouKnowUsDropdown" 
+                                    data-bs-toggle="dropdown" aria-expanded="false">
+                                <img *ngIf="selectedOption" [src]="selectedOption.icon" class="option-icon" alt="icon"> 
+                                {{ selectedOption ? selectedOption.label : 'Select an option' }}
+                            </div>
+                            <ul class="dropdown-menu w-100" aria-labelledby="HowDidYouKnowUsDropdown">
+                                <li *ngFor="let option of howDidYouKnowUsOptions" (click)="selectOption(option)">
+                                <a class="dropdown-item">
+                                    <img [src]="option.icon" class="option-icon" alt="icon"> {{ option.label }}
+                                </a>
+                                </li>
+                            </ul>
+                            </div>
+                            <div *ngIf="hasError('HowDidYouKnowUs', 'required')" class="invalid-feedback">
+                            This field is required.
+                            </div>
+                        </div>
+
+                        <!-- Are you currently using the system? -->
+                        <div class="col-sm-12 col-md-6 mb-3">
+                            <label class="form-label" style="margin-bottom: 20px;">Are you currently using the system?</label>
+                            <div class="row d-flex">
+                                <div class="col-6">
+                                    <div class="form-check">
+                                        <input class="form-check-input" type="radio" id="usingSystemYes" formControlName="UsingSystem" value="yes">
+                                        <label class="form-check-label" for="usingSystemYes">Yes</label>
+                                    </div>
+                                </div>
+                                <div class="col-6">
+                                    <div class="form-check">
+                                        <input class="form-check-input" type="radio" id="usingSystemNo" formControlName="UsingSystem" value="no">
+                                        <label class="form-check-label" for="usingSystemNo">No</label>
+                                    </div>
+                                </div>
+                            </div>
+
+                            <div *ngIf="hasError('UsingSystem', 'required')" class="invalid-feedback">
+                              This field is required.
+                            </div>
+                        </div>
+                    </div>
+                    <div class="row" >
+                        <div class="col d-flex justify-content-end">
+                            <button type="submit" class="btn btn-primary">
+                                Create Account
+                                <i class="pi pi-arrow-right"></i>
+                              </button>    
+                        </div>
+                    </div>
+                </form>
+            </div>
+            </div>
+        </div>
+    </div>
+</div>
