--- a/src/app/registration/registration/registration.component.scss
+++ b/src/app/registration/registration/registration.component.scss
@@ -1,7 +1,6 @@
 
   .parent {
     height: 100vh;
-    // width: 100vw;
     background: #F5F6F9 0% 0% no-repeat padding-box;
 
     .row {
@@ -31,7 +30,7 @@
 
   .image-overlay {
     position: absolute;
-    top: 434px;
+    bottom: 0;
     left: 0;
     width: 34.33%;
     height: 366px;
@@ -285,9 +284,6 @@ footer {
   .form-column {
     width: 50%;
     margin: 0 0 0 5%;
-  }
-  .form-control {
-
   }
   
 }
