Responsive created successfully page

--- a/src/app/registration/created-successfully/created-successfully.component.html
+++ b/src/app/registration/created-successfully/created-successfully.component.html
@@ -1,1 +1,15 @@
-<p>created-successfully works!</p>
+<div class="row created-successfully-page">
+
+    <div class="col-sm-12 col-md-6 animation-container">
+
+        <ng-lottie 
+        [options]="options" 
+            width="240px" 
+            height="240px" 
+        />
+
+      <h2 class="success-title">Successfully</h2>
+      <p class="success-message">Your account successfully created. Just a few steps more to setup your business account</p>
+    </div>
+  </div>
+  
