--- a/src/app/registration/business-information/business-information.component.html
+++ b/src/app/registration/business-information/business-information.component.html
@@ -6,10 +6,9 @@
             <div class="header">Few clicks away from creating your business</div>
             <div class="description">Start your business in minutes. save time and money</div>
         </div>
-
     </div>
+    
     <div class="form-column">
-
         <!-- Get Help link -->
         <div class="row help-link" >
             <div class=" col-sm-12 col-md-4" style="width: auto;" >
@@ -19,10 +18,10 @@
         </div>
 
         <div class="row">
-            <div class="col-sm-12 col-md-8" style="margin: auto;"> 
+            <div class="col-sm-12 col-md-10 col-lg-8" style="margin: auto;"> 
                 <!-- back arrow -->
                 <div class="col-sm-12">
-                    <img src="assets/back-arrow.svg" class="back-arrow"  alt="back-arrow">
+                    <img src="assets/back-arrow.svg" class="back-arrow" (click)="back()"  alt="back-arrow">
                 </div>
 
                 <!-- Header  -->
