--- a/src/app/registration/business-information/business-information.component.html
+++ b/src/app/registration/business-information/business-information.component.html
@@ -7,7 +7,7 @@
             <div class="description">Start your business in minutes. save time and money</div>
         </div>
     </div>
-    
+
     <div class="form-column">
         <!-- Get Help link -->
         <div class="row help-link" >
@@ -142,7 +142,7 @@
                     </div>
                     <div class="row" >
                         <div class="col d-flex justify-content-end">
-                            <button type="submit" class="btn btn-primary">
+                            <button type="submit" class="btn btn-primary" [disabled]="BusinessForm.invalid">
                                 Create Account
                                 <i class="pi pi-arrow-right"></i>
                               </button>    
