--- a/src/app/registration/business-information/business-information.component.scss
+++ b/src/app/registration/business-information/business-information.component.scss
@@ -61,6 +61,7 @@
               width: 24px;
               padding: 0;
               margin-bottom: 24px;
+              cursor: pointer;
         }
 
         .title {
