--- a/src/app/registration/verification-code/verification-code.component.html
+++ b/src/app/registration/verification-code/verification-code.component.html
@@ -17,7 +17,8 @@
                             (input)="moveToNext($event)" [(ngModel)]="code[3]" [ngClass]="{'filled': code[3]}">
             </div>
             <p class="resend-instruction">The code will be sent again within <span>{{counter}}</span> seconds</p>
-            <button class="verify-button" (click)="verify()">Verify</button>
+            <button class="verify-button" (click)="verify()" 
+                    [class.disabled]="isButtonDisabled()"    [disabled]="isButtonDisabled()" >Verify</button>
         </div>
     </div>
 </div>
