--- a/src/app/registration/verification-code/verification-code.component.scss
+++ b/src/app/registration/verification-code/verification-code.component.scss
@@ -93,6 +93,9 @@
                 color: white;
                 font-size: 16px;
                 cursor: pointer;
+               &.disabled{
+                opacity: 0.5;
+               } 
               }
         }
     }
